Solved last problems. Now everything works.
