# medicine-react-app/gen/api/src/apis/DefaultApi.ts
@@ -1,7 +1,7 @@
 /* tslint:disable */
 /* eslint-disable */
 /**
- * Medicine description service
+ * Medicine service
  * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
  *
  * The version of the OpenAPI document: 0.1.0
@@ -24,7 +24,7 @@ import {
 } from '../models';
 
 export interface MedicinesRequest {
-    name?: string;
+    date?: string;
 }
 
 /**
@@ -33,19 +33,19 @@ export interface MedicinesRequest {
 export class DefaultApi extends runtime.BaseAPI {
 
     /**
-     * Returns list of medicine characteristics
+     * Returns list of medicines
      */
     async medicinesRaw(requestParameters: MedicinesRequest): Promise<runtime.ApiResponse<Array<Medicine>>> {
         const queryParameters: any = {};
 
-        if (requestParameters.name !== undefined) {
-            queryParameters['name'] = requestParameters.name;
+        if (requestParameters.date !== undefined) {
+            queryParameters['date'] = requestParameters.date;
         }
 
         const headerParameters: runtime.HTTPHeaders = {};
 
         const response = await this.request({
-            path: `/medicines`,
+            path: `/medicine`,
             method: 'GET',
             headers: headerParameters,
             query: queryParameters,
@@ -55,7 +55,7 @@ export class DefaultApi extends runtime.BaseAPI {
     }
 
     /**
-     * Returns list of medicine characteristics
+     * Returns list of medicines
      */
     async medicines(requestParameters: MedicinesRequest): Promise<Array<Medicine>> {
         const response = await this.medicinesRaw(requestParameters);
