# medicine-react-app/gen/api/src/models/Medicine.ts
@@ -1,7 +1,7 @@
 /* tslint:disable */
 /* eslint-disable */
 /**
- * Medicine description service
+ * Medicine service
  * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
  *
  * The version of the OpenAPI document: 0.1.0
@@ -24,19 +24,55 @@ export interface Medicine {
      * @type {string}
      * @memberof Medicine
      */
-    name: string;
+    name1?: string;
     /**
      * 
      * @type {string}
      * @memberof Medicine
      */
-    amount: string;
+    amount1?: string;
     /**
      * 
      * @type {string}
      * @memberof Medicine
      */
-    address: string;
+    address1?: string;
+    /**
+     * 
+     * @type {string}
+     * @memberof Medicine
+     */
+    name2?: string;
+    /**
+     * 
+     * @type {string}
+     * @memberof Medicine
+     */
+    amount2?: string;
+    /**
+     * 
+     * @type {string}
+     * @memberof Medicine
+     */
+    address2?: string;
+    /**
+     * 
+     * @type {string}
+     * @memberof Medicine
+     */
+    name3?: string;
+    /**
+     * 
+     * @type {string}
+     * @memberof Medicine
+     */
+    amount3?: string;
+    /**
+     * 
+     * @type {string}
+     * @memberof Medicine
+     */
+    address3?: string;
 }
 
 export function MedicineFromJSON(json: any): Medicine {
@@ -49,9 +85,15 @@ export function MedicineFromJSONTyped(json: any, ignoreDiscriminator: boolean): 
     }
     return {
         
-        'name': json['name'],
-        'amount': json['amount'],
-        'address': json['address'],
+        'name1': !exists(json, 'name1') ? undefined : json['name1'],
+        'amount1': !exists(json, 'amount1') ? undefined : json['amount1'],
+        'address1': !exists(json, 'address1') ? undefined : json['address1'],
+        'name2': !exists(json, 'name2') ? undefined : json['name2'],
+        'amount2': !exists(json, 'amount2') ? undefined : json['amount2'],
+        'address2': !exists(json, 'address2') ? undefined : json['address2'],
+        'name3': !exists(json, 'name3') ? undefined : json['name3'],
+        'amount3': !exists(json, 'amount3') ? undefined : json['amount3'],
+        'address3': !exists(json, 'address3') ? undefined : json['address3'],
     };
 }
 
@@ -64,9 +106,15 @@ export function MedicineToJSON(value?: Medicine | null): any {
     }
     return {
         
-        'name': value.name,
-        'amount': value.amount,
-        'address': value.address,
+        'name1': value.name1,
+        'amount1': value.amount1,
+        'address1': value.address1,
+        'name2': value.name2,
+        'amount2': value.amount2,
+        'address2': value.address2,
+        'name3': value.name3,
+        'amount3': value.amount3,
+        'address3': value.address3,
     };
 }
 
